# engine-native

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: predefine.cmake
cmake/scripts/: effects_gzip.js  glsl_gzip.js
cocos/: Android.mk  cocos2d.h
cocos/base/: Any.h  CCConfiguration.cpp  CCData.h  CCGLUtils.cpp  CCRenderTexture.cpp  CCRenderTexture.h  DeferredReleasePool.cpp  DeferredReleasePool.h  FakeGL.cpp  FakeGL.h  FakeGLTypes.h  Macros.h  Map.h  Optional.h  Ptr.h  Ref.h  RefCounted.cpp  RefCounted.h  Scheduler.cpp  Scheduler.h  StringUtil.cpp  StringUtil.h  TypeDef.h  Utils.h  Variant.h  Vector.h  WebGLCommandBuffer.cpp  WebGLCommandBuffer.h  WebGLContext.cpp  WebGLContext.h  WebGLFrame.cpp  WebGLFrame.h  WebGLRenderContext.cpp  WebGLRenderContext.h  bgfx.cpp  bgfx.h  bgfx_config.h  bgfx_p.h  bgfx_platform.h  ccTypes.cpp  (+1 more)
cocos/bindings/: .gitignore
cocos/components/: Component.h
cocos/core/: Any.h  ArrayBuffer.h  DataView.cpp  DataView.h  Director.cpp  Director.h  Game.cpp  Game.h  JSArrays.h  Root.cpp  Root.h  Scheduler.cpp  Scheduler.h  System.cpp  System.h  TypedArray.cpp  TypedArray.h  Types.cpp  Types.h
cocos/editor-support/: MiddlewareManager.h  middleware-adapter.cpp  middleware-adapter.h
cocos/math/: Color.cpp  Color.h  Mat3.cpp  (+14 more)
licenses/: LICENSE_MurmurHash2.txt
tests/module-tests/geometry/: CMakeLists.txt  test-geometry.cpp
utils/: compile_file.js  docker_gen_bindings.sh  generate_compile_commands_android.sh  generate_compile_commands_ohos.sh  generate_compile_commands_windows.sh  generate_project.sh
(+700 files in other folders)
